<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/additem_height">

    <TextView
        android:id="@+id/col_number_additem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/title_col_number_additem"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/col_id_additem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_col_id_additem"
            android:gravity="center"/>

        <TextView
            android:id="@+id/col_name_additem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_col_name_additem"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/col_cost_additem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/title_col_cost_additem"
        android:gravity="center"/>

    <TextView
        android:id="@+id/col_amount_additem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/title_col_amount_additem"
        android:gravity="center"/>

</LinearLayout>