<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_id_additem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_col_id_additem"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_name_additem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_col_name_additem"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_price_additem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_col_cost_additem"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_additem_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/title_col_amount_additem"
        android:gravity="center"/>

</LinearLayout>