<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardView_recyclerview_orderlist_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/item_margin"
    app:cardCornerRadius="@dimen/cardView_Corner_Radius"
    android:elevation="@dimen/cardView_Elevation">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/col_number_orderlist"
            android:layout_width="@dimen/col_number_orderlist_width"
            android:layout_height="match_parent"
            android:text="@string/title_col_number_orderlist_text"
            android:textSize="@dimen/text_size"
            android:gravity="left|center"/>

        <TextView
            android:id="@+id/col_name_orderlist"
            android:layout_width="@dimen/col_name_orderlist_width"
            android:layout_height="match_parent"
            android:text="@string/title_col_name_orderlist_text"
            android:textSize="@dimen/text_size"
            android:gravity="center"/>

        <TextView
            android:id="@+id/col_money_orderlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_col_money_orderlist_text"
            android:textSize="@dimen/text_size"
            android:gravity="center"/>

    </LinearLayout>

</android.support.v7.widget.CardView>