<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_oderdate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardView_search_orderlist_height"
        app:cardCornerRadius="@dimen/cardView_Corner_Radius"
        android:elevation="@dimen/cardView_Elevation"
        android:layout_margin="@dimen/item_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/item_margin">

            <TextView
                android:id="@+id/tv_orderdate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderlist_date_title"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/tv_orderdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/redA700">
        
        <TextView
            android:id="@+id/title_col_number_orderlist"
            android:layout_width="@dimen/col_number_orderlist_width"
            android:layout_height="wrap_content"
            android:text="@string/title_col_number_orderlist_text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/title_col_name_orderlist"
            android:layout_width="@dimen/col_name_orderlist_width"
            android:layout_height="wrap_content"
            android:text="@string/title_col_name_orderlist_text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:id="@+id/title_col_money_orderlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_col_money_orderlist_text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:gravity="center"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/orderlist_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/redA700">

            <TextView
                android:id="@+id/tv_total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin"
                android:text="@string/total_title_text"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"
                android:textStyle="bold"

                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/tv_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginRight="@dimen/item_margin_tong"
                android:text="@string/total_value_default"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

        </RelativeLayout>

    </FrameLayout>


</LinearLayout>