<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/edt_login_id"
            android:layout_width="@dimen/edt_login_width"
            android:layout_height="@dimen/edt_login_height"
            android:layout_margin="@dimen/item_margin"
            android:inputType="text"
            android:textSize="@dimen/login_textsize"
            android:hint="@string/edt_login_id"/>

        <EditText
            android:id="@+id/edt_login_pw"
            android:layout_width="@dimen/edt_login_width"
            android:layout_height="@dimen/edt_login_height"
            android:inputType="textPassword"
            android:layout_below="@+id/edt_login_id"
            android:layout_alignStart="@id/edt_login_id"
            android:textSize="@dimen/login_textsize"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/btn_login_width"
            android:layout_height="@dimen/btn_login_height"
            android:layout_marginTop="@dimen/item_margin"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/edt_login_pw"
            android:text="@string/btn_login_text"
            android:textSize="@dimen/login_textsize"/>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="@dimen/btn_login_width"
            android:layout_height="@dimen/btn_login_height"
            android:layout_marginTop="@dimen/item_margin"
            android:gravity="center"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_exit_text"
            android:textSize="@dimen/login_textsize"/>

        <Button
            android:id="@+id/btn_about"
            android:layout_width="@dimen/btn_about_width"
            android:layout_height="@dimen/btn_about_height"
            android:layout_marginTop="@dimen/item_margin"
            android:gravity="center"
            android:layout_below="@id/btn_exit"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_about_text"
            android:textSize="@dimen/login_textsize"/>

    </RelativeLayout>





</RelativeLayout>